tests/type-check/bad/local-import.arr
import file("../good/export.arr") as T

a :: T.Foo = T.foo(1)

b = T.f("a")
